--- a/my-portfolio-master/Main/style.css
+++ b/my-portfolio-master/Main/style.css
@@ -68,3 +68,34 @@ body {
 }
 html { height: 100%
   }
+.header{
+    text-align: center;
+    font-style: oblique;
+    background-color: #607d8b;
+    color: #ffffff;
+
+}
+ul{
+    color:black;
+}
+p{
+    color: black;
+}
+img {
+    float: right;
+}
+h2  {
+    color: blue;
+}
+h3{
+    color: blue;
+}
+body {
+    background-image: "fgcu background.jfif";
+}
+#logo {width: auto;
+    Height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative; }
