changed photo of Myself

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h3{
     color: black;
 }
 body {
-    background-image: url("lutgerthall.png");
+    background-image: url("Photos/lutgerthall.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
