about me paragraph content

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 #meparagraph{
     font: bold 20px "Times New Roman";
     background-color: teal;
-    text-align: center;
+    text-align: left;
 
 }
 #logo {
