--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     background-position: center;
     height: 100%;
     overflow: hidden;
+    backdrop-filter: blur(8px);
 }
 
 .paragraph {
@@ -103,6 +104,7 @@ h3 {
 
 body {
     background-image: "fgcu background.jfif";
+
 }
 
 #logo {
@@ -112,8 +114,4 @@ body {
     margin-left: auto;
     margin-right: auto;
     position: relative;
-}
-
-.inDark {
-    color: white;
 }
